[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tower/fire station.png" type="Texture" id=1]
[ext_resource path="res://LightShadow_pipo.png" type="Texture" id=2]
[ext_resource path="res://UI/HP_Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tower/FireStation.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "LightShadow_pipo.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "LightShadow_pipo.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 82.5709, 26.3814 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 129.47, 8.83154 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.3308, 23.1078 )

[sub_resource type="Animation" id=5]
resource_name = "aman"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fire station:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "bakar"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("fire station:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "siram"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("fire station:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "terbakar"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fire station:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="FireStation" type="KinematicBody2D" groups=[
"main_tower",
]]
scale = Vector2( 1.84, 2 )
collision_layer = 16
collision_mask = 46
script = ExtResource( 4 )
state = "aman"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65531, 1, 0, 4, 0, 0, 5, 0, 0, 6, 0, 1, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 65536, 65542, 0, 65537 )

[node name="fire station" type="Sprite" parent="."]
position = Vector2( 0, -20.6362 )
texture = ExtResource( 1 )
offset = Vector2( 1.03821, -42.8283 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"main_tower",
]]
position = Vector2( 0, 5.55591 )
shape = SubResource( 2 )

[node name="H_area" type="Area2D" parent="."]
position = Vector2( 0, 14.6954 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="H_area"]
position = Vector2( 0, 4.20448 )
shape = SubResource( 3 )

[node name="V_area" type="Area2D" parent="."]
position = Vector2( 0, 12.314 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="V_area"]
position = Vector2( 0, 25.4712 )
shape = SubResource( 4 )

[node name="HP_Bar" parent="." instance=ExtResource( 3 )]
margin_left = -97.2331
margin_top = -48.0837
margin_right = 176.767
margin_bottom = -8.0837
rect_scale = Vector2( 0.705287, 0.521067 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aman = SubResource( 5 )
anims/bakar = SubResource( 6 )
anims/siram = SubResource( 7 )
anims/terbakar = SubResource( 8 )

[connection signal="maintower_hit" from="." to="." method="_on_main_tower_hit"]
[connection signal="body_entered" from="H_area" to="." method="_on_refill_area_body_entered"]
[connection signal="body_exited" from="H_area" to="." method="_on_refill_area_body_exited"]
[connection signal="body_entered" from="V_area" to="." method="_on_refill_area_body_entered"]
[connection signal="body_exited" from="V_area" to="." method="_on_refill_area_body_exited"]
